<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Volume Control</string>

    <!-- Sound settings screen heading -->
    <string name="sound_settings">Sound settings</string>
    <!-- Sound settings screen, setting option name checkbox -->
    <string name="silent_mode_title">Silent mode</string>
    <!-- Sound settings screen, setting option summary text when going into silent mode.  Media and alarms sounds WILL NOT be silenced in silent mode. -->
    <string name="silent_mode_summary">Silence all sounds except media &amp; alarms</string>
    <!-- Sound settings screen, setting option summary text when going into silent mode.  Media WILL NOT be silenced in silent mode, but alarms WILL be silenced. -->
    <string name="silent_mode_incl_alarm_summary">All sounds except media are silenced</string>
    <!-- Sound settings screen, the title of the volume bar to adjust the incoming call volume -->
    <string name="incoming_call_volume_title">Incoming Call</string>
    <!-- Sound settings screen, the title of the volume bar to adjust the notification volume -->
    <string name="notification_volume_title">Notification</string>
    <!-- Sound settings screen, setting option name -->
    <string name="media_volume_title">Media</string>
    <!-- Sound settings screen, alarm volume slider title -->
    <string name="system_volume_title">System</string>
    <!-- Sound settings screen, mute checkbox title -->
    <string name="mute_volume_tilte">Mute</string>
</resources>
