<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <ImageView
        android:src="@android:drawable/divider_horizontal_dim_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:gravity="center_horizontal">
	                
	        <!-- Used for the ring volume.-->
	        <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/incoming_call_volume_title"
	                android:paddingTop="10dip"
	                android:paddingLeft="20dip" 
	                android:paddingRight="20dip" />
	                
	        <SeekBar android:id="@+id/incoming_call_volume_seekbar"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:paddingTop="2dip"
	                android:paddingLeft="20dip" 
	                android:paddingRight="20dip" />
	            
	        <!-- Used for the media volume -->
	        <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/media_volume_title"
	                android:paddingTop="10dip"
	                android:paddingLeft="20dip" 
	                android:paddingRight="20dip" />
	                
	        <SeekBar android:id="@+id/media_volume_seekbar"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:paddingTop="2dip"
	                android:paddingLeft="20dip"
	                android:paddingRight="20dip" />
	
	        <!-- Used for the alarm volume -->
	        <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/system_volume_title"
	                android:paddingTop="10dip"
	                android:paddingLeft="20dip" 
	                android:paddingRight="20dip" />
	                
	        <SeekBar android:id="@+id/alarm_volume_seekbar"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:paddingTop="2dip"
	                android:paddingLeft="20dip" 
	                android:paddingRight="20dip" />

            <!-- Used for the notification volume -->	    
	        <TextView android:id="@+id/notification_volume_title"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/notification_volume_title"
	                android:paddingTop="6dip"
	                android:paddingLeft="20dip" 
	                android:paddingRight="20dip" />
	        
	        <SeekBar android:id="@+id/notification_volume_seekbar"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:paddingTop="2dip"
	                android:paddingLeft="20dip" 
	                android:paddingRight="20dip" />
	        
            <!-- Used for un/mute -->
	        <CheckBox android:id="@+id/mute_volume_checkbox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dip"
                    android:paddingLeft="60dip" 
                    android:paddingRight="40dip"
                    android:text="@string/mute_volume_tilte"/>
	        
	        <TableRow android:id="@+id/tableRow"
	                android:layout_height="wrap_content" 
	                android:layout_width="fill_parent" 
	                android:layout_marginTop="25dip"
	                android:background="#ffa0a0a0">
	            
	            <Button android:id="@+id/buttonOK" 
	                    android:text="@android:string/ok"
	                    android:layout_width="fill_parent" 
	                    android:layout_height="wrap_content" 
	                    android:layout_marginTop="5dip"
	                    android:layout_weight="1"/>
	            
	            <Button android:id="@+id/buttonCancel" 
	                    android:text="@android:string/cancel"
	                    android:layout_width="fill_parent" 
	                    android:layout_height="wrap_content" 
	                    android:layout_marginTop="5dip"
	                    android:layout_weight="1"/>
	        
	        </TableRow>
	        
	    </LinearLayout>
	</ScrollView>
</LinearLayout>